1526 move testResource macro to core (#1531)